--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -3609,23 +3609,21 @@
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BioInfoCell" rowHeight="45" id="uRm-Yq-bYo" customClass="CardOptionsViewCell" customModule="Unify" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="359" height="45"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="uRm-Yq-bYo" id="ya7-Fq-NVG">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uRm-Yq-bYo" id="ya7-Fq-NVG">
                                             <rect key="frame" x="0.0" y="0.0" width="359" height="45"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JKh-JV-AFG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="48"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JKh-JV-AFG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="45"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.59999999999999998" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZIK-hk-cIG">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.59999999999999998" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZIK-hk-cIG">
                                                             <rect key="frame" x="13" y="8" width="344" height="40"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="40" id="AM4-gp-Glm"/>
-                                                            </constraints>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Text" pointSize="14"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ck-YU-Afr">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ck-YU-Afr">
                                                             <rect key="frame" x="13" y="5" width="0.0" height="22"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="22" id="LiF-0I-3I6"/>
@@ -3638,20 +3636,20 @@
                                                     <constraints>
                                                         <constraint firstItem="7Ck-YU-Afr" firstAttribute="top" secondItem="JKh-JV-AFG" secondAttribute="top" constant="5" id="8Ad-DJ-dF4"/>
                                                         <constraint firstItem="7Ck-YU-Afr" firstAttribute="leading" secondItem="JKh-JV-AFG" secondAttribute="leading" constant="13" id="FWi-6D-0q4"/>
-                                                        <constraint firstAttribute="trailing" secondItem="ZIK-hk-cIG" secondAttribute="trailing" constant="2" id="iG6-1S-zd8"/>
-                                                        <constraint firstItem="ZIK-hk-cIG" firstAttribute="top" secondItem="7Ck-YU-Afr" secondAttribute="bottom" constant="-19" id="iMO-m2-MRg"/>
-                                                        <constraint firstAttribute="bottom" secondItem="ZIK-hk-cIG" secondAttribute="bottom" id="rDv-LY-b1X"/>
-                                                        <constraint firstItem="ZIK-hk-cIG" firstAttribute="leading" secondItem="JKh-JV-AFG" secondAttribute="leading" constant="13" id="xw4-kN-DMa"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="JKh-JV-AFG" firstAttribute="top" secondItem="ya7-Fq-NVG" secondAttribute="top" id="3Pn-qJ-t8i"/>
                                                 <constraint firstItem="JKh-JV-AFG" firstAttribute="leading" secondItem="ya7-Fq-NVG" secondAttribute="leading" id="G6d-Up-goP"/>
-                                                <constraint firstAttribute="bottom" secondItem="JKh-JV-AFG" secondAttribute="bottom" constant="27" id="YbC-wK-d37"/>
+                                                <constraint firstAttribute="bottom" secondItem="JKh-JV-AFG" secondAttribute="bottom" id="YbC-wK-d37"/>
                                                 <constraint firstAttribute="trailing" secondItem="JKh-JV-AFG" secondAttribute="trailing" id="rTd-jH-vSp"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="descriptionLabel" destination="ZIK-hk-cIG" id="Tg4-px-5Ng"/>
+                                            <outlet property="titleLabel" destination="7Ck-YU-Afr" id="ifO-vb-kni"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="InfoCell" rowHeight="175" id="1w6-6J-ciC">
                                         <rect key="frame" x="0.0" y="73" width="359" height="175"/>
