--- a/Unify/Base.lproj/Main.storyboard
+++ b/Unify/Base.lproj/Main.storyboard
@@ -792,7 +792,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJD-Fs-RNY">
                                 <rect key="frame" x="13" y="131" width="345" height="196"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gbs-w2-Ilt" customClass="ACFloatingTextfield" customModule="ACFloatingTextfield_Swift">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gbs-w2-Ilt" customClass="ACFloatingTextfield" customModule="ACFloatingTextfield_Swift">
                                         <rect key="frame" x="35" y="56" width="295" height="36"/>
                                         <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-MediumP4" family="San Francisco Display" pointSize="18"/>
@@ -813,7 +813,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VCS-LP-CFT" customClass="ACFloatingTextfield" customModule="ACFloatingTextfield_Swift">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VCS-LP-CFT" customClass="ACFloatingTextfield" customModule="ACFloatingTextfield_Swift">
                                         <rect key="frame" x="35" y="20" width="295" height="36"/>
                                         <color key="textColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-MediumP4" family="San Francisco Display" pointSize="18"/>
@@ -850,15 +850,19 @@
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="ugU-zK-tRB" firstAttribute="centerY" secondItem="VCS-LP-CFT" secondAttribute="centerY" id="9aw-mq-TZD"/>
-                                    <constraint firstItem="VCS-LP-CFT" firstAttribute="leading" secondItem="ugU-zK-tRB" secondAttribute="trailing" constant="8" symbolic="YES" id="HEK-dI-gIv"/>
-                                    <constraint firstItem="BKW-XV-chW" firstAttribute="centerY" secondItem="gbs-w2-Ilt" secondAttribute="centerY" id="bCV-Vi-AJV"/>
+                                    <constraint firstItem="gbs-w2-Ilt" firstAttribute="centerY" secondItem="BKW-XV-chW" secondAttribute="centerY" id="3zn-bv-hg6"/>
+                                    <constraint firstItem="VCS-LP-CFT" firstAttribute="leading" secondItem="ugU-zK-tRB" secondAttribute="trailing" constant="8" symbolic="YES" id="6m9-S5-Ah5"/>
+                                    <constraint firstAttribute="trailing" secondItem="VCS-LP-CFT" secondAttribute="trailing" constant="15" id="7zJ-NG-Kei"/>
+                                    <constraint firstItem="VCS-LP-CFT" firstAttribute="top" secondItem="LJD-Fs-RNY" secondAttribute="top" constant="20" id="SSp-cE-z1C"/>
+                                    <constraint firstItem="VCS-LP-CFT" firstAttribute="centerY" secondItem="ugU-zK-tRB" secondAttribute="centerY" id="TnJ-7F-3Qf"/>
+                                    <constraint firstItem="gbs-w2-Ilt" firstAttribute="top" secondItem="VCS-LP-CFT" secondAttribute="bottom" id="WkC-Z3-G1J"/>
+                                    <constraint firstItem="VCS-LP-CFT" firstAttribute="trailing" secondItem="gbs-w2-Ilt" secondAttribute="trailing" id="XSF-om-myy"/>
                                     <constraint firstItem="BKW-XV-chW" firstAttribute="top" secondItem="ugU-zK-tRB" secondAttribute="bottom" constant="16" id="fVb-cc-xtZ"/>
                                     <constraint firstItem="ugU-zK-tRB" firstAttribute="leading" secondItem="LJD-Fs-RNY" secondAttribute="leading" constant="7" id="gG1-zC-CBm"/>
                                     <constraint firstItem="ugU-zK-tRB" firstAttribute="leading" secondItem="BKW-XV-chW" secondAttribute="leading" id="gha-IW-eXs"/>
                                     <constraint firstItem="ugU-zK-tRB" firstAttribute="top" secondItem="LJD-Fs-RNY" secondAttribute="top" constant="28" id="njt-kh-W23"/>
                                     <constraint firstAttribute="height" constant="196" id="p5O-FC-j0y"/>
-                                    <constraint firstItem="gbs-w2-Ilt" firstAttribute="leading" secondItem="BKW-XV-chW" secondAttribute="trailing" constant="8" symbolic="YES" id="zHJ-7l-VPv"/>
+                                    <constraint firstItem="VCS-LP-CFT" firstAttribute="leading" secondItem="gbs-w2-Ilt" secondAttribute="leading" id="qJw-VC-DmS"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oDQ-GL-EI1">
@@ -1039,7 +1043,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sDk-Ie-KmE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3854" y="1809"/>
+            <point key="canvasLocation" x="3853.5999999999999" y="1808.5457271364319"/>
         </scene>
         <!--Card Recipient List View Controller-->
         <scene sceneID="ABs-qR-35M">
@@ -8835,17 +8839,16 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="28S-HR-k8c">
-                                                <rect key="frame" x="8" y="39" width="122" height="25"/>
+                                                <rect key="frame" x="8" y="39" width="55" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="25" id="H6X-7H-Q2H"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Text" pointSize="17"/>
-                                                <state key="normal" title="Edit Card Name">
+                                                <state key="normal" title="Cancel">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="addCardName:" destination="j5R-8u-hRu" eventType="touchUpInside" id="6mJ-hV-zIZ"/>
-                                                    <action selector="addCardName:" destination="krk-qZ-4Wf" eventType="touchUpInside" id="GRX-72-0L8"/>
+                                                    <action selector="cancelCardCreation:" destination="krk-qZ-4Wf" eventType="touchUpInside" id="guo-SO-1bt"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -8861,8 +8864,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4p3-Lo-iPJ">
                                         <rect key="frame" x="8" y="78" width="359" height="181"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PE4-Nt-VsJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="359" height="181"/>
+                                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PE4-Nt-VsJ">
+                                                <rect key="frame" x="0.0" y="30" width="359" height="181"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mn1-7A-bmq">
                                                         <rect key="frame" x="0.0" y="0.0" width="137" height="137"/>
@@ -9013,12 +9016,28 @@
                                                     <constraint firstAttribute="trailing" secondItem="j9y-be-UrO" secondAttribute="trailing" constant="16" id="zvW-aY-rUJ"/>
                                                 </constraints>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CGz-cU-Ina">
+                                                <rect key="frame" x="8" y="0.0" width="122" height="25"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="7vm-v3-deJ"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Text" pointSize="17"/>
+                                                <state key="normal" title="Edit Card Name">
+                                                    <color key="titleColor" red="0.11056222020000001" green="0.20581735670000001" blue="0.43148908019999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="addCardName:" destination="krk-qZ-4Wf" eventType="touchUpInside" id="Er0-B9-9Pw"/>
+                                                    <action selector="addCardName:" destination="j5R-8u-hRu" eventType="touchUpInside" id="vZT-yH-Vxq"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="PE4-Nt-VsJ" firstAttribute="trailing" secondItem="4p3-Lo-iPJ" secondAttribute="trailingMargin" constant="8" id="9gA-El-5Bj"/>
                                             <constraint firstItem="PE4-Nt-VsJ" firstAttribute="top" secondItem="4p3-Lo-iPJ" secondAttribute="topMargin" constant="-8" id="9qU-Na-D87"/>
+                                            <constraint firstItem="CGz-cU-Ina" firstAttribute="top" secondItem="377-nn-58v" secondAttribute="top" id="Ail-7Y-J5Q"/>
                                             <constraint firstAttribute="bottom" secondItem="PE4-Nt-VsJ" secondAttribute="bottom" id="F6X-dY-a1b"/>
+                                            <constraint firstItem="CGz-cU-Ina" firstAttribute="centerX" secondItem="377-nn-58v" secondAttribute="centerX" id="VxT-8T-jMe"/>
                                             <constraint firstAttribute="height" constant="181" id="plC-z0-bDA"/>
                                             <constraint firstItem="PE4-Nt-VsJ" firstAttribute="leading" secondItem="4p3-Lo-iPJ" secondAttribute="leadingMargin" constant="-8" id="rfd-J5-rZv"/>
                                         </constraints>
@@ -9030,8 +9049,8 @@
                                             <constraint firstAttribute="height" constant="55" id="sFd-Yt-bdm"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="45" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7L8-w7-Nzo">
-                                        <rect key="frame" x="8" y="288" width="359" height="317"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="45" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7L8-w7-Nzo">
+                                        <rect key="frame" x="8" y="325" width="359" height="280"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileBioInfoCell" rowHeight="45" id="F2K-JG-MPv" customClass="CardOptionsViewCell" customModule="Unify" customModuleProvider="target">
@@ -9287,17 +9306,30 @@
                                     <constraint firstItem="7L8-w7-Nzo" firstAttribute="top" secondItem="4p3-Lo-iPJ" secondAttribute="bottom" constant="29" id="tFl-PH-cRi"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cF6-dh-J8k">
+                                <rect key="frame" x="142" y="627" width="92" height="25"/>
+                                <fontDescription key="fontDescription" name=".HelveticaNeueDeskInterface-Regular" family="San Francisco Text" pointSize="17"/>
+                                <state key="normal" title="Delete Card">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteCard:" destination="krk-qZ-4Wf" eventType="touchUpInside" id="Drh-e4-rH6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="sBX-X8-9hl" secondAttribute="trailing" id="2Fz-8I-XH8"/>
+                            <constraint firstItem="cF6-dh-J8k" firstAttribute="centerX" secondItem="sBX-X8-9hl" secondAttribute="centerX" id="2xi-6G-26m"/>
                             <constraint firstItem="sBX-X8-9hl" firstAttribute="top" secondItem="bsJ-RO-mnA" secondAttribute="top" id="5yY-xp-OGm"/>
+                            <constraint firstItem="Cr1-iR-Dqi" firstAttribute="top" secondItem="cF6-dh-J8k" secondAttribute="bottom" constant="15" id="6UI-yw-Uyc"/>
                             <constraint firstItem="Cr1-iR-Dqi" firstAttribute="top" secondItem="sBX-X8-9hl" secondAttribute="bottom" constant="48" id="QLd-eR-oeb"/>
+                            <constraint firstItem="cF6-dh-J8k" firstAttribute="top" secondItem="sBX-X8-9hl" secondAttribute="bottom" constant="8" symbolic="YES" id="VG3-kB-gsJ"/>
                             <constraint firstItem="sBX-X8-9hl" firstAttribute="leading" secondItem="bsJ-RO-mnA" secondAttribute="leading" id="gjw-CF-kE9"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addCardNameButton" destination="28S-HR-k8c" id="sLF-Mw-6g0"/>
+                        <outlet property="addCardNameButton" destination="CGz-cU-Ina" id="tBb-xJ-9xV"/>
                         <outlet property="addImageButton" destination="377-nn-58v" id="UO0-JR-POs"/>
                         <outlet property="cardOptionsTableView" destination="7L8-w7-Nzo" id="1A0-KU-2yk"/>
                         <outlet property="emailLabel" destination="KqL-js-cki" id="W93-YT-986"/>
@@ -9310,7 +9342,7 @@
                         <outlet property="mediaButton7" destination="jra-yu-4dV" id="KeT-EQ-2D3"/>
                         <outlet property="nameLabel" destination="d7o-qs-PPc" id="A6e-rc-yuI"/>
                         <outlet property="numberLabel" destination="j9y-be-UrO" id="dR7-qv-b9W"/>
-                        <outlet property="profileCardWrapperView" destination="PE4-Nt-VsJ" id="Hjf-qO-CvE"/>
+                        <outlet property="profileCardWrapperView" destination="4p3-Lo-iPJ" id="0eZ-Aj-IzB"/>
                         <outlet property="profileImageView" destination="mn1-7A-bmq" id="MZA-tB-P2f"/>
                         <outlet property="socialMediaToolBar" destination="Pqw-d2-Zsr" id="7el-Kr-5Ca"/>
                         <outlet property="titleLabel" destination="jS2-14-S41" id="gTa-gy-WAn"/>
@@ -9318,7 +9350,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Gg-zv-emU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6022" y="3849"/>
+            <point key="canvasLocation" x="6021.6000000000004" y="3848.7256371814096"/>
         </scene>
         <!--Collection View Controller-->
         <scene sceneID="gZp-VV-fQI">
